@startuml domain

skinparam linetype ortho

'========================================================
rectangle #36827F{
class Building  << Root >> << Entity >>
class BuildingDescription  << (v,#A4C2E5) ValueObject >>
class BuildingName  << (v,#A4C2E5) ValueObject >>
class BuildingCode  << (v,orange) ValueObject >> << unique >>
class BuildingSize  << (v,#A4C2E5) ValueObject >>
}

'========================================================
rectangle #9055A2{
class Elevator  << Root >> << Entity >>
class ElevatorId  << (v,orange) ValueObject >> << unique >>
class ElevatorBrand << (v,#A4C2E5) ValueObject >>
class ElevatorModel << (v,#A4C2E5) ValueObject >>
class ElevatorDescription << (v,#A4C2E5) ValueObject >>
class ElevatorIdentificationNumber << (v,#A4C2E5) ValueObject >>
class ElevatorSerialNumber << (v,#A4C2E5) ValueObject >>

}

'========================================================
rectangle #D499B9{
class Floor  << Root >> << Entity >>
class FloorId  << (v,orange) ValueObject >> << unique >>
class FloorDescription  << (v,#A4C2E5) ValueObject >>
class FloorMap  << Entity >>
class FloorNumber << (v,#A4C2E5) ValueObject >>
}

'========================================================

Elevator "1"--l>"1" ElevatorId
Elevator "1"-->"1" ElevatorBrand
Elevator "1"-->"1" ElevatorModel
Elevator "1"-->"1" ElevatorIdentificationNumber
Elevator "1"-->"1" ElevatorDescription
Elevator "1"--r>"1" ElevatorSerialNumber

Building "1"->"*" Floor
Building "*"-->"0..1" BuildingDescription
Building "1"-->"0..1" BuildingName
Building "*"-->"1" BuildingSize
Building "1"-->"1" BuildingCode

Floor "1"-d->"1" FloorMap
Floor "*"-u>"1" FloorNumber
Floor "*"-->"1" FloorDescription
Floor "1" -> "1" FloorId

FloorMap "1"-d---->"0..1" Elevator

@enduml